# hilan-automation

./: .env.defaults  .gitignore  README.md  build.sh  conftest.py  hilan.spec  pyproject.toml  run.py
.github/workflows/: linter.yml  release.yml
assets/: icon.icns
docs/superpowers/specs/: 2026-03-23-playwright-to-selenium-design.md
packaging/: build.sh  hilan.spec
src/: README.md  automation.py  config.py  credentials.py  hilan.py  logger.py  tutorial.py  utils.py
src/assets/: fingerprint_shim.js
src/scanners/: hilan_scanner_test.py
src/ui/: dialogs.py  tk_utils.py
