[project]
name = "hilan-automation"
version = "0.1.0"
description = "Automated Hilan attendance report filling using Playwright"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keyring>=25.0.0",
    "playwright>=1.40.0",
    "python-dotenv>=1.0.0",
    "ttkbootstrap>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
]
build = [
    "pyinstaller>=6.0",
]

[tool.ruff]
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "W", "I", "PL", "G", "TRY"]
ignore = [
    "D100",     # missing-module-docstring
    "D101",     # missing-class-docstring
    "D103",     # missing-function-docstring
    "G004",     # logging-fstring-interpolation
    "TRY002",   # broad-exception-raised (raise-vanilla-class)
    "TRY003",   # long exception messages (commonly triggered with TRY)
    "TRY300",   # try-consider-else
    "PLR0913",  # too-many-arguments
    "PLR2004",  # magic-value-comparison
    "PLR0914",  # too-many-locals
    "PLR0917",  # too-many-positional-arguments
]
